@startuml

skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam CircledCharacterFontSize 0
skinparam CircledCharacterRadius 0

class "{abstract}\nItem" {
    # itemName: String
    # itemDescription: String
    # itemQuantity: Integer
    # itemCostPrice: Double

    + getItemName(): String
    + getItemDescription(): String
    + getItemQuantity(): Integer
    + setItemQuantity(itemQuantity: Integer)
    + getItemCostPrice(): Double
    + toString(): String
}

class OperationalItem {
    + toString(): String
}

class RetailItem {
    - itemSalePrice: Double

    + getItemSalePrice(): Double
    + toString(): String
}

class PerishableOperationalItem{
    - itemExpirationDate: LocalDate

    + getItemExpirationDate(): String
    + toString(): String
}

class PerishableRetailItem {
    - itemExpirationDate: LocalDate

    + getItemExpirationDate(): String
    + toString(): String
}

"{abstract}\nItem" <|-- OperationalItem
"{abstract}\nItem" <|-- RetailItem

OperationalItem <|-- PerishableOperationalItem
RetailItem <|-- PerishableRetailItem

@enduml